--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,13 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
-dependencies = []
+dependencies = [
+  "click",
+  "structlog",
+  "uvicorn",
+  "websockets",
+  "fastapi",
+]
 
 [project.urls]
 Documentation = "https://github.com/unknown/dotbot-authority#readme"
